# ecoshard

./: .travis.yml  HISTORY.rst  LICENSE.txt  MANIFEST.in  README.rst  build_cv_styles.py  ca_ndr.ini  convolution_tests.py  cv_style_template.xml  download_data_for_ipbes_paper_for_geoserver.py  environment.yml  load_styles_to_geoserver.py  load_to_geoserver.py  pyproject.toml  requirements.txt  setup.py  test_metadata.py  test_parallel_raster_calculator.py
ecoshard-docker-test/: Dockerfile
src/ecoshard/: __init__.py  __main__.py  ecoshard.py  utils.py  visualizer.py
src/ecoshard/geoprocessing/: CoordFastFileIterator.h  FastFileIterator.h  __init__.py  geoprocessing.py  geoprocessing_core.cpp  geoprocessing_core.pyx  symbolic.py
src/ecoshard/geoprocessing/routing/: LRUCache.h  __init__.py  routing.cpp  routing.pyx  watershed.cpp  watershed.pyx
src/ecoshard/geosharding/: __init__.py  geosharding.py  geosplitter.py
src/ecoshard/geosplitter/: geosplitter.py
src/ecoshard/geostac/: Dockerfile  __init__.py  build_catalog.py  geostac_app.py  query_catalog.py
src/ecoshard/templates/: ecoshard.html
src/fetch_data/: __init__.py  defaults.ini  fetch_data.py
src/taskgraph/: Task.py  __init__.py
tests/: test_ecoshard.py  test_geoprocessing.py  test_routing.py  test_task.py  test_watershed_delineation.py
