[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "wheel",
    "Cython>=0.29.36",
    "numpy>=1.20",
]
build-backend = "setuptools.build_meta"

[project]
name = "ecoshard"
dynamic = ["version"]
dependencies = [
    "boto3",
    "filelock",
    "GDAL",
    "numexpr",
    "numpy",
    "psutil",
    "requests",
    "retrying",
    "Rtree",
    "scipy",
    "shapely",
    "SQLAlchemy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

