[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "wheel",
    "Cython>=0.29.36",
    "numpy>=1.20",
]
build-backend = "setuptools.build_meta"

[project]
name = "ecoshard"
description = "EcoShard GIS data"
readme = "README.rst"
license = "BSD-3-Clause"
maintainers = [
    {name = "Rich Sharp", email = "richpsharp@gmail.com"},
]
keywords = ["computing reproduction"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.7",
]
dynamic = ["version"]
dependencies = [
    "boto3",
    "filelock",
    "GDAL",
    "numexpr",
    "numpy",
    "psutil",
    "requests",
    "retrying",
    "Rtree",
    "scipy",
    "shapely",
    "SQLAlchemy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/therealspring/ecoshard"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

